--- a/css/shanti-search-mediabase.css
+++ b/css/shanti-search-mediabase.css
@@ -127,7 +127,7 @@
 
 #loading-text{
   position: absolute;
-  left: 60px;
+  left: 45px;
 }
 
 
